test/libyul/yulSyntaxTests/switch_invalid_expr_2.yul
{
    switch mload
    case 1 {}
    default {}
}
// ----
// ParserError 7104: (13-18='mload'): Builtin function "mload" must be called.
